# rustpoc

./: Cargo.toml  body.json  build.rs  voting.proto
src/: database.rs  db.rs  grpc.rs  lib.rs  main.rs  rabbit.rs  rabbit_example_consumer.rs  rabbit_example_sender.rs  server.rs  service.rs
