[package]
name = "rustpoc"
version = "0.1.0"
edition = "2021"

default-run = "service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service"
path = "src/main.rs"

[[bin]]
name = "database"
path = "src/database.rs"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
futures-lite = "1.12.0"
lapin = "2.1.1"
mongodb = "2.3.1"
prost = "0.11.0"
serde = "1.0.145"
serde_json = "1.0.85"
serde_with = { version = "2.0.1", features = ["chrono_0_4"] }
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = "0.8.2"
