[package]
name = "rustpoc"
version = "0.1.0"
edition = "2021"

default-run = "service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service"
path = "src/main.rs"

[[bin]]
name = "database"
path = "src/database.rs"

[[bin]]
name = "rabbitconsumer"
path = "src/rabbit_example_consumer.rs"

[[bin]]
name = "rabbitsender"
path = "src/rabbit_example_sender.rs"

[dependencies]
anyhow = "1.0.65"
async-channel = "1.8.0"
async-trait = "0.1.60"
axum = "0.6.1"
axum-macros = "0.3.0"
futures-util = "0.3.25"
hyper = { version = "0.14.20", features = ["full"] }
lapin = "2.1.1"
mongodb = "2.3.1"
prost = "0.11.0"
serde = "1.0.145"
serde_json = "1.0.85"
serde_with = "2.0.1"
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.4"
tonic = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8.2"
